# StateSpaceModels

./: .gitignore  README.md  profil.sh  pyproject.toml  requirements.txt  setup.py  submit.sh  tasks.py  train.sh
configs/: config.yaml
configs/dataset/: audiomnist.yaml  etth1.yaml  smnist.yaml  weather.yaml
configs/experiment/: conv.yaml  exp1.yaml  exp2.yaml  origs4.yaml  s4.yaml  s4_audio.yaml  s4_etth1.yaml  s4_smnist.yaml  s4_weather.yaml  s4dds.yaml  s4dss.yaml  s4dss_smnist.yaml  s6_etth1.yaml  s6_naive_smnist.yaml  s6_smnist.yaml  s6_weather.yaml
csrc/: setup.py
lightning_logs/version_1/: metrics.csv
notebooks/: parallel_scan.ipynb
src/ssm/: data.py  hippo.py  kernel.py  model.py  parallel_scan.py  train.py  utils.py
src/ssm/ops/: selective_scan_interface.py
src/ssm/ops/triton/: layer_norm.py  selective_state_update.py  ssd_chunk_scan.py  ssd_chunk_state.py  ssd_combined.py
